# PythonPackage

./: README.md  pyproject.toml
src/my_package/: __init__.py  main.py
src/my_package.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_main.py
