[build-system]  # Projenin hangi araçlar ve yapılandırmalarla paketleneceğini belirler.
requires = ["setuptools", "wheel"]        # Paketleme işlemi için gerekli olan araçları belirtir.
build-backend = "setuptools.build_meta"   # Paketleme işlemini gerçekleştirecek backend'i belirtir. 

[project]  # Meta verilerini içerir.
name = "my_package"
version = "0.0.1"
description = "Ornek bir Python paketi"
authors = [
  { name = "Zeynep Yildiz", email = "zeynep@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



